<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <include layout="@layout/part_header" />

    <TextView style="@style/T.Title" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginLeft="14dp"
        android:layout_marginTop="6dp" android:text="@string/tab_projects" />

    <LinearLayout android:id="@+id/btnNew" style="@style/Cta"
        android:layout_height="52dp" android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp" android:layout_marginTop="12dp">
        <ImageView android:layout_width="20dp" android:layout_height="20dp"
            android:src="@drawable/ic_plus_box" />
        <TextView style="@style/CtaText" android:textSize="16sp"
            android:text="@string/new_project" />
    </LinearLayout>

    <TextView android:id="@+id/empty" style="@style/T.Sub"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="28dp" android:gravity="center"
        android:text="@string/no_project" android:visibility="gone" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:divider="@color/transparent"
        android:dividerHeight="8dp"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:scrollbars="none" />
</LinearLayout>
